projeto baseado nos meus estudos de html e css

--- a/projeto-pt2/index.html
+++ b/projeto-pt2/index.html
@@ -7,7 +7,8 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
-
+    <h1>Olá,mundo nao tenho muitas redes sociais porem espero que gostem do meu github</h1>   
+    <a href="https://github.com/dev-alexandre2024?tab=overview&from=2025-01-01&to=2025-01-13" target="_blank">Acesse o meu github</a>
+    <a href="https://github.com/dev-brunosantos" target="_blank">acesse o gihub do meu tio</a>
 </body>
 </html>
